--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,8 @@ menu:
     url:   /about/
   - title: Officers
     url:   /officers/
+  - title: AutoOfficers
+    url:   /officers-temp/
   - title: Events
     url:   /events/
   - title: Links
@@ -56,6 +58,9 @@ menu:
 collections:
   featured_categories:
     permalink:         /events/
+    output:            true
+  officers:
+    permalink:         /officers/
     output:            true
 
 #  - title: Candidates
@@ -84,6 +89,10 @@ defaults:
       path:            assets/
     values:
       sitemap:         false
+
+# changing the favicons to VT specific favicon
+favicon:              /assets/icons/favicon-32x32.png
+apple_touch_icon:     /assets/icons/apple-touch-icon-192x192.png
 
 hydejack:
   no_drawer:         false
